<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="com.foodgram.HomePage">


    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/login"
        android:layout_above="@+id/SignUpButton"
 />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/sign_up"
        android:layout_alignParentBottom="true"/>

    <ImageView
        android:id="@+id/foodgramlogo"
        android:layout_width="347dp"
        android:layout_height="376dp"
        android:layout_above="@+id/loginButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="67dp"
        android:contentDescription="@string/foodgramlogo_for_welcome_screen"
        app:srcCompat="@drawable/foodgram" />


</RelativeLayout>
